fix: now is saving state after removing item from image

--- a/src/app/components/drag-drop/drag-drop.component.html
+++ b/src/app/components/drag-drop/drag-drop.component.html
@@ -21,6 +21,15 @@
                 </label>
               </button>
             </div>
+            <div class="ui-g-3">
+              <button type="button"
+                      class="clear-button"
+                      (click)="clearData($event)" id="clearDataBtn">
+                <label for="clearDataBtn" class="btn clicable">
+                  <i class="fa fa-times mr-1"></i>Clear data
+                </label>
+              </button>
+            </div>
           </div>
         </div>
       </p-accordionTab>
