--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@
 $background: #343434;
 $btn-confirm: #595c90;
 $btn-cancel: #b4534b;
+$btn-clear: #575a64;
 $accordion-header: #595c90;
 $accordion-body: transparent;
 $text-primary: #ffffff;
